Fixed a spacing issue

--- a/screen.css
+++ b/screen.css
@@ -62,11 +62,13 @@ h1 {
 h2 {
   font-size: 3em;
   font-family: 'Oswald', sans-serif;
+  line-height: 1.3em;
 }
 
 h3 {
   font-size: 2.5em;
   font-family: 'Oswald', sans-serif;
+  line-height: 1em;
 }
 
 h4 {
